kubernetes-manifests/ms-usuarios.yaml
# kubernetes-manifests/ms-usuarios.yaml

# 1. Service (ClusterIP)
# Define el nombre del servicio interno para otros microservicios (o para el Kong Ingress).

apiVersion: v1
kind: Service
metadata:
  name: ms-usuarios-service # Nombre de DNS interno: ms-usuarios-service
  labels:
    app: ms-usuarios
spec:
  selector:
    app: ms-usuarios # Selecciona los Pods con esta etiqueta
  ports:
    - protocol: TCP
      port: 3001 # Puerto del Service
      targetPort: 3001 # Puerto en el contenedor
  type: ClusterIP 
---

# 2. Deployment
# Define la configuración de la réplica y el contenedor.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-usuarios-deployment
spec:
  replicas: 1 # Queremos una sola instancia de este servicio, para el momento de la resilencia
  selector:
    matchLabels:
      app: ms-usuarios
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ms-usuarios 
    spec:
      # --- CORRECCIÓN CLAVE: containers está anidado correctamente bajo spec ---
      containers:
        - name: ms-usuarios
          image: sebsgo/ms-usuarios:1.1 
          imagePullPolicy: IfNotPresent # Añadido para usar la imagen local de minikube/Docker.
          ports:
            - containerPort: 3001
